--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,28 @@
-.heading {
+*,
+*::before,
+*::after {
 
-    font-size: 36px;
+    box-sizing: border-box;
+}
+
+:root {
+    --sm-fs: .89rem;
+    --n-fs: 1.rem
+}
+
+
+.heading {
+    font-size: 26px;
     font-weight: 600;
 }
 
 .heading_summary {
-    width: 65%;
-    /* text-align: center; */
+    width: 100%;
+    text-align: center;
+    text-wrap: balance;
+    font-size: var(--sm-fs);
 }
+
 
 .row {
     margin-top: 5%;
@@ -17,23 +32,17 @@
 
 }
 
-@media(max-width: 700px) {
-    .row {
-        flex-direction: column;
-    }
-
-}
-
-
 .hero-btn {
     display: inline-block;
     text-decoration: none;
     color: #fff;
-    border: 1px solid brown;
-    padding: 12px 34px;
+    /* border: 1px solid brown; */
+    padding: 10px 20px;
     background: brown;
-    position: relative;
+    /* position: relative; */
     cursor: pointer;
+    border-radius: 1rem;
+    font-size: .85rem;
 }
 
 .hero-btn:hover {
@@ -102,17 +111,6 @@
 }
 
 
-
-
-/*   colors
-        #f2f3f7
-        #d2dce9
-        #36187d
-        #6c758f
-        #0196e3
- */
-
-
 .icons .fa {
     color: #f44336;
     margin: 0 13px;
@@ -125,72 +123,32 @@
 
 }
 
+@media screen and (min-width:540px) {
+    .hero-btn {
+        padding: 12px 34px;
+        font-size: 1rem;
+    }
 
-/*-------About Us -------*/
+    .heading {
+        font-size: 36px;
+        font-weight: 600;
+    }
 
-/*------ About Us Content ------*/
-
-
-
-/*----- ACCOUNT/PORTAL PAGE -----*/
-/* .account-page {
-    padding: 50PX;
+    .heading_summary {
+        width: 85%;
+        font-size: var(--n-fs);
+        /* text-align: center; */
+    }
 }
 
-.form-container {
-    background: #fff;
-    width: 300px;
-    height: 525px;
-    position: relative;
-    text-align: center;
-    padding: 20px 0;
-    margin: auto;
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+@media(max-width: 700px) {
+    .row {
+        flex-direction: column;
+    }
+
 }
 
-.form-container span {
-    font-weight: bold;
-    padding: 0 10px;
-    color: brown;
-    cursor: pointer;
-    width: 100px;
-    display: inline-block;
-}
-
-.form-btn {
-    display: inline-block;
-}
-
-.form-container form {
-    max-width: 300px;
-    padding: 0 20px;
-    position: absolute;
-    top: 130px;
-    transition: transform 1s;
-}
-
-.form input {
-    width: 100%;
-    height: 30px;
-    margin: 10px 0;
-    padding: 0 10px;
-    border: 1px solid #ccc;
-}
-
-#LoginForm {
-    left: -300px;
-}
-
-#RegForm {
-    left: 0;
-}
-
-form a {
-    font-size: 14px;
-}
-
-#Indicator {
+/* #Indicator {
     width: 75px;
     border: none;
     background: #C08F4F;
