--- a/src/pages/Home/Testimonial.module.css
+++ b/src/pages/Home/Testimonial.module.css
@@ -4,45 +4,69 @@
     margin: auto;
     padding-top: 100px;
     text-align: center;
-
-
 }
 
 .testimonial_column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     flex-basis: 44%;
     border-radius: 10px;
     margin-bottom: 5%;
-    text-align: left;
+    padding: 2rem;
     background: #fff3f3;
-    padding: 25px;
     cursor: pointer;
-    display: flex;
+    height: 15rem;
+
+    /* w-24 h-24 md: w-48 md:h-auto md:rounded-none rounded-full mx-auto" src=" /sarah-dayan.jpg" alt=" " width=" 384" height=" 512 */
+}
+
+.image_container {
+    height: 6rem;
+    width: 6rem;
+    /* overflow:hidden ; */
+
+}
+
+.image_container > img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
 }
 
 .testimonial_column img {
-    height: 40px;
-    margin-left: 5px;
-    margin-right: 30px;
-    border-radius: 5px;
+    border-radius: 50%;
+
 }
 
 .testimonial_column p {
     padding: 0;
 }
 
-.testimonial_column h3 {
-    margin-top: 15px;
-    text-align: left;
-}
 
 .testimonial_column .fa {
     color: brown;
 }
 
-@media(max-width: 700px) {
-    .testimonial_column img {
-        margin-left: 0px;
-        margin-right: 15px;
+@media screen and (min-width: 540px) {
+    .testimonial_column {
+        display: flex;
+        flex-direction: row;
+        padding: 0;
+        /* margin-left: 0px;
+        margin-right: 15px; */
     }
 
+    .image_container {
+        height: 100%;
+        width: 110%;
+        overflow: hidden;
+    }
+
+    .testimonial_column img {
+        height: 100%;
+        border-radius: 0;
+
+    }
 }
