--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
 .row {
     margin-top: 5%;
     display: flex;
+    /* flex-wrap: wrap; */
     justify-content: space-between;
     gap: 2rem;
 
@@ -75,16 +76,19 @@
     }
 }
 
+.formGroup {
+    border: 1px solid brown;
+    padding: 10px 20px;
+}
 
-.formGroup input {
-    width: 400px;
-    height: 45px;
+.formGroup input,
+.formGroup textarea {
+    width: 100%;
     border-radius: 4px;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 40px;
+    margin: 15px 0;
     outline: none;
     border: none;
+    background: #f0f0f0;
 }
 
 
