--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -10,8 +10,25 @@
 }
 
 .nav_links {
-    flex: 1;
-    text-align: right;
+    /* outline: 2px solid white; */
+    height: 0;
+    width: 0;
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    right: 0;
+    transition: all .3s ease-in;
+}
+
+.nav_link_list {
+    display: flex;
+    flex-direction: column;
+    background-color: #f65050;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
 }
 
 .nav_links ul li {
@@ -27,6 +44,7 @@
     font-size: 13px;
 }
 
+
 .nav_links ul li::after {
     content: '';
     width: 0%;
@@ -41,37 +59,66 @@
     width: 100%;
 }
 
-nav .fa {
-    display: none;
+.toggle {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border: 2px solid #a52a2a;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 5px;
+    transition: all .5s ease-in;
+    z-index: 10;
+    position: fixed;
+    top: 1.3rem;
+    right: 1rem;
 }
 
+.menu_active {
+    width: 60dvw;
+    height: 100dvh;
+    opacity: 1;
+    visibility: visible;
+}
+
+
 @media(max-width: 700px) {
-    .nav_links ul li {
-        display: block;
-    }
-
-    .nav_links {
-        position: fixed;
-        background: brown;
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        right: -200px;
-        text-align: left;
-        z-index: 2;
-        transition: 1s;
-    }
-
-    nav .fa {
-        display: block;
-        color: #C08F4F;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
-    }
-
     .nav_links ul {
         padding: 30px;
 
+    }
+}
+
+@media screen and (min-width:700px) {
+    .nav_links {
+
+        height: auto;
+        width: auto;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        width: 60%;
+        opacity: 1;
+        height: auto;
+        opacity: 1;
+        visibility: visible;
+        position: static;
+    }
+
+    .nav_link_list {
+        display: flex;
+        flex-direction: row;
+        background-color: transparent;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0;
+
+    }
+
+    .toggle {
+        visibility: hidden;
+        opacity: 0;
     }
 }
