--- a/src/pages/Home/Testimonial.module.css
+++ b/src/pages/Home/Testimonial.module.css
@@ -18,8 +18,15 @@
     background: #fff3f3;
     cursor: pointer;
     height: 15rem;
+    overflow: hidden;
+    outline: 1px solid brown;
+    transition: all .3s ease-in-out;
+}
 
-    /* w-24 h-24 md: w-48 md:h-auto md:rounded-none rounded-full mx-auto" src=" /sarah-dayan.jpg" alt=" " width=" 384" height=" 512 */
+.testimonial_column:hover {
+    outline-offset: 5px;
+    transform: scale(1.1);
+
 }
 
 .image_container {
@@ -31,8 +38,8 @@
 
 .image_container > img {
     object-fit: cover;
-    height: 100%;
-    width: 100%;
+    aspect-ratio: auto;
+
 }
 
 .testimonial_column img {
@@ -49,13 +56,11 @@
     color: brown;
 }
 
-@media screen and (min-width: 540px) {
+@media screen and (min-width: 700px) {
     .testimonial_column {
-        display: flex;
         flex-direction: row;
         padding: 0;
-        /* margin-left: 0px;
-        margin-right: 15px; */
+        height: auto;
     }
 
     .image_container {
